[gd_scene load_steps=14 format=3 uid="uid://dr86kfm2rp5k4"]

[ext_resource type="Script" path="res://Main/Common/level_transition.gd" id="1_grin5"]
[ext_resource type="Material" uid="uid://cw8kovgeqm575" path="res://Assets/Resource/Shaders/black_white_material.tres" id="2_86r1w"]
[ext_resource type="Theme" uid="uid://n3ns3n53r5ve" path="res://Assets/Resource/Themes/pixel/pixel_theme.tres" id="2_aqq0l"]
[ext_resource type="Script" path="res://addons/dialogue_manager/dialogue_label.gd" id="3_w8u6x"]
[ext_resource type="Texture2D" uid="uid://dhw4l5ijak70p" path="res://icon.svg" id="5_yjvod"]
[ext_resource type="VideoStream" path="res://Assets/Videos/cg.ogv" id="6_c3ebe"]
[ext_resource type="AudioStream" uid="uid://b110ls17pcpcl" path="res://Assets/Videos/cg_sound.mp3" id="7_gvsto"]

[sub_resource type="Animation" id="Animation_n5loj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_i4jdc"]
resource_name = "black"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_y37s7"]
resource_name = "fade_in"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 0.4), Color(0, 0, 0, 0.7), Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_di5eu"]
resource_name = "fade_in_slowly"
length = 2.0
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.01),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_e2ua2"]
resource_name = "fade_out"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0.8), Color(0, 0, 0, 0.4), Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2ao50"]
_data = {
"RESET": SubResource("Animation_n5loj"),
"black": SubResource("Animation_i4jdc"),
"fade_in": SubResource("Animation_y37s7"),
"fade_in_slowly": SubResource("Animation_di5eu"),
"fade_out": SubResource("Animation_e2ua2")
}

[node name="LevelTransition" type="CanvasLayer"]
process_mode = 3
layer = 101
script = ExtResource("1_grin5")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
modulate = Color(0, 0, 0, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="EndingScene" type="Control" parent="."]
visible = false
material = ExtResource("2_86r1w")
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("2_aqq0l")

[node name="CenterContainer" type="CenterContainer" parent="EndingScene"]
use_parent_material = true
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 10.0
offset_bottom = 310.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="EndingScene/CenterContainer"]
use_parent_material = true
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 32

[node name="DialogueLabel" type="RichTextLabel" parent="EndingScene/CenterContainer/VBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "[center]市民们聚集到街头和总统的府邸前，所有人都戴着静音标志的口罩，拿着空白的标语，做出嘘的动作。"
fit_content = true
scroll_active = false
script = ExtResource("3_w8u6x")

[node name="DialogueLabel2" type="RichTextLabel" parent="EndingScene/CenterContainer/VBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "[center]那一晚被称作“无声革命”."
fit_content = true
scroll_active = false
script = ExtResource("3_w8u6x")

[node name="CenterContainer2" type="CenterContainer" parent="EndingScene"]
use_parent_material = true
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -432.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="EndingScene/CenterContainer2"]
use_parent_material = true
custom_minimum_size = Vector2(800, 400)
layout_mode = 2
mouse_filter = 2
texture = ExtResource("5_yjvod")
expand_mode = 1

[node name="CG" type="VideoStreamPlayer" parent="."]
offset_right = 1024.0
offset_bottom = 576.0
mouse_filter = 2
theme = ExtResource("2_aqq0l")
stream = ExtResource("6_c3ebe")
volume_db = -80.0
expand = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="CG"]
stream = ExtResource("7_gvsto")

[node name="MarginContainer" type="MarginContainer" parent="CG"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -124.0
offset_top = -33.0
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 15

[node name="SkipLabel" type="Label" parent="CG/MarginContainer"]
layout_mode = 2
text = "Press Esc to skip"
horizontal_alignment = 2
vertical_alignment = 2

[node name="CenterContainer" type="CenterContainer" parent="CG"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -88.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="CG/CenterContainer"]
custom_minimum_size = Vector2(800, 0)
layout_mode = 2

[node name="DialogueLabel" type="RichTextLabel" parent="CG/CenterContainer/MarginContainer"]
clip_contents = false
layout_mode = 2
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "[center]很久以前，那曾是一片被暴君统治的黑暗大陆。"
fit_content = true
scroll_active = false
script = ExtResource("3_w8u6x")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2ao50")
}
